<resources>
    <string name="app_name">Telemedicine</string>
    <string name="bs_1">Lorem ipsum dolor sit amet, conse ctetur adipiscingelit, t. Ut
    enim ad veni am, quis nostrud exercitation ullamco</string>
    <string name="bs_2">Aku ingin menjadi setitik awan kecil di langint bersama mentari yaga hah</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_txt">Welcome</string>
    <string name="login">Login</string>
    <string name="urgent">Urgent</string>
    <string name="register_toolbar_txt">Register</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name_hint">Your Full Name</string>
    <string name="birthday_field">Birthday</string>
    <string name="birthday_input_hint">yyyy/MM/dd</string>
    <string name="email_input_hint">Your Email</string>
    <string name="email_input_label">Email</string>
    <string name="phone_number_field_label">Phone Number</string>
    <string name="phone_number_field_hint">Your Phone Number</string>
    <string name="location_adress_input_label">Location/Adress</string>
    <string name="location_field_hint">Your Location</string>
    <string name="next_button_txt">Next</string>
    <string name="telemedicine_splash">Telemedicine</string>
    <string name="email_adress_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button_txt">Login</string>
    <string name="signup_btn_text">sign up</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_home">Home</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_profile">Profile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_toolbar_text">Home</string>
    <string name="name">Name</string>
    <string name="your_name_hint">Your Name</string>
    <string name="disease">Disease</string>
    <string name="what_is_your_illness">What is your illness</string>
    <string name="location">Location</string>
    <string name="where_is_your_location">Where is your location</string>
    <string name="description_optional">Description ( Optional)</string>
    <string name="describe_here">Describe Here</string>
    <string name="request">Request</string>
    <string name="toolbar_new_request">Home</string>
    <string name="notification">Notification</string>
    <string name="approved_request">Your Request Has Been Approved</string>
    <string name="user_req_name">Name</string>
    <string name="location_label">Location</string>
    <string name="doctor_label">Doctor</string>
    <string name="confirm_req">Confirm</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="description">Description</string>
    <string name="doctor_list">Doctor List</string>
    <string name="doctor_contact">Doctor Details</string>
    <string name="short_description">Short Description</string>
    <string name="google_maps_API_key">AIzaSyAxzzyIwYzc0hsXcya8Hd9hL3uRfRfVplM</string>
    <string name="your_login">Your Login</string>
    <string name="your_password">Your Password</string>
</resources>
