<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_pattern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/welcome_text_view_width"
        android:layout_height="@dimen/welcome_txt_layout_height"
        android:layout_marginTop="@dimen/welcome_txt_margin_top"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/welcome_txt"
        android:textAlignment="center"
        android:textColor="@color/WhiteColor"
        android:textSize="@dimen/welcome_text_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/bs1_txt_view_width"
        android:layout_height="@dimen/bs1_txt_view_height"
        android:layout_marginTop="@dimen/bs1_txt_margin_top"
        android:fontFamily="@font/proxima_nova_regular"
        android:lineSpacingExtra="@dimen/bs1_txt_line_spacing"
        android:text="@string/bs_1"
        android:textAlignment="center"
        android:textColor="@color/WhiteColor"
        android:textSize="@dimen/welc_act_multiline_txt_size"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/sign_up_button_width"
        android:layout_height="@dimen/sign_up_button_height"
        android:layout_marginBottom="@dimen/sign_up_btn_margin_bottom"
        android:background="@drawable/shape"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/greenTextColor"
        android:textSize="@dimen/sign_up_txt_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/sign_up_button_width"
        android:layout_height="@dimen/sign_up_button_height"
        android:layout_marginBottom="@dimen/login_btn_margin_bottom"
        android:background="@drawable/shape_transparent"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/login_btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <Button
        android:id="@+id/urgent_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/urgent_btn_margin_bottom"
        android:background="#00000000"
        android:fontFamily="@font/proxima_nova_semibold"
        android:text="@string/urgent"
        android:textColor="@android:color/white"
        android:textSize="@dimen/urgent_txt_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>